Add filters layout

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,38 @@
         </div>
       </div>
     </section>
+    <section class="filters">
+      <form class="filters__form">
+        <label class="filters__label">
+          <h6 class="filters__title">Platform</h6>
+          <select class="filters__select" name="platform" id="platform">
+            <option class="filters__option" value="any">Any Platform</option>
+            <option class="filters__option" value="pc">PC</option>
+            <option class="filters__option" value="ps">Play Station</option>
+            <option class="filters__option" value="xbox">XBox</option>
+          </select>
+        </label>
+        <label class="filters__label">
+          <h6 class="filters__title">Region</h6>
+          <select class="filters__select" name="region" id="region">
+            <option class="filters__option" value="any">Any Region</option>
+            <option class="filters__option" value="europe">Europe</option>
+            <option class="filters__option" value="asia">Asia</option>
+            <option class="filters__option" value="russia">Russia</option>
+            <option class="filters__option" value="america">America</option>
+          </select>
+        </label>
+        <label class="filters__label">
+          <h6 class="filters__title">Voice</h6>
+          <select class="filters__select" name="voice" id="voice">
+            <option class="filters__option" value="any">Any Voice</option>
+            <option class="filters__option" value="pc">PC</option>
+            <option class="filters__option" value="ps">Play Station</option>
+            <option class="filters__option" value="xbox">XBox</option>
+          </select>
+        </label>
+      </form>
+    </section>
   </div>
   <script src="./assets/scripts/index.js"></script>
 </body>
