--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,12 @@
       <div class="container nav_container">
         <a href="#" class="nav__logo">LookingFor</a>
         <ul class="nav__bar">
-          <li><a href="#" class="nav__item">Home</a></li>
-          <li><a href="#" class="nav__item">About</a></li>
-          <li><a href="#" class="nav__item">New Card</a></li>
-          <li><a href="#" class="nav__item">Signin</a></li>
-          <li><a href="#" class="nav__item">Signup</a></li>
+          <li><a href="./index.html" class="nav__item nav__item_current">Home</a></li>
+          <li><a href="./about.html" class="nav__item">About</a></li>
+          <li><a href="./newcard.html" class="nav__item">New Card</a></li>
+          <li><a href="./signin.html" class="nav__item">Signin</a></li>
+          <li><a href="./signup.html" class="nav__item">Signup</a></li>
+          <li><a href="./profile.html" class="nav__item">Profile</a></li>
         </ul>
       </div>
     </div>
@@ -45,7 +46,7 @@
                 alt="archeage"></div>
             <div class="selects__game-item"><img src="./assets/images/archeage.png" class="selects__image"
                 alt="archeage"></div>
-            <div class="selects__game-item selects__game-item_active"><img src="./assets/images/archeage.png"
+            <div class="selects__game-item selects__game-item_current"><img src="./assets/images/archeage.png"
                 class="selects__image" alt="archeage">
             </div>
             <div class="selects__game-item"><img src="./assets/images/archeage.png" class="selects__image"
@@ -57,7 +58,7 @@
         <div class="selects__looking">
           <h2 class="selects__items-title">Looking For</h2>
           <div class="selects__items">
-            <div class="selects__item selects__item_active">Group</div>
+            <div class="selects__item selects__item_current">Group</div>
             <div class="selects__item">Guild</div>
             <div class="selects__item selects__item_long">Group Members</div>
             <div class="selects__item selects__item_long">Guild Members</div>
@@ -66,7 +67,7 @@
       </section>
       <section class="filters">
         <form class="filters__form">
-          <label class="filters__label">
+          <label class="filters__label filters__label_arrow">
             <h6 class="filters__title">Platform</h6>
             <select class="filters__select" name="platform" id="platform">
               <option class="filters__option" value="any">Any Platform</option>
@@ -75,7 +76,7 @@
               <option class="filters__option" value="xbox">XBox</option>
             </select>
           </label>
-          <label class="filters__label">
+          <label class="filters__label filters__label_arrow">
             <h6 class="filters__title">Region</h6>
             <select class="filters__select" name="region" id="region">
               <option class="filters__option" value="any">Any Region</option>
@@ -85,7 +86,7 @@
               <option class="filters__option" value="america">America</option>
             </select>
           </label>
-          <label class="filters__label">
+          <label class="filters__label filters__label_arrow">
             <h6 class="filters__title">Voice</h6>
             <select class="filters__select" name="voice" id="voice">
               <option class="filters__option" value="any">Any Voice</option>
@@ -177,7 +178,7 @@
           </p>
         </div>
       </section>
-      <section class="pagination">
+      <div class="pagination">
         <div class="pagination__item">«</div>
         <div class="pagination__item">1</div>
         <div class="pagination__item">2</div>
@@ -185,7 +186,7 @@
         <div class="pagination__item">4</div>
         <div class="pagination__item">5</div>
         <div class="pagination__item">»</div>
-      </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="container footer_container">
