--- a/src/profile.html
+++ b/src/profile.html
@@ -11,19 +11,20 @@
 
 <body>
   <div class="lookingfor">
-    <div class="nav">
+    <nav class="nav">
       <div class="container nav_container">
         <a href="#" class="nav__logo">LookingFor</a>
         <ul class="nav__bar">
           <li><a href="./index.html" class="nav__item">Home</a></li>
           <li><a href="./about.html" class="nav__item">About</a></li>
           <li><a href="./newcard.html" class="nav__item">New Card</a></li>
-          <li><a href="./signin.html" class="nav__item">Signin</a></li>
-          <li><a href="./signup.html" class="nav__item">Signup</a></li>
+          <li><a href="#" class="nav__item">Signin</a></li>
+          <li><a href="#" class="nav__item">Signup</a></li>
           <li><a href="./profile.html" class="nav__item nav__item_current">Profile</a></li>
         </ul>
       </div>
-    </div>
+      <img src="./assets/images/menu.svg" alt="menu" class="nav__burger">
+    </nav>
     <header class="header">
       <img src="./assets/images/banner.jpg" alt="Banner" class="header__banner">
       <div class="container header_container">
