Add burger menu class

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <nav class="nav">
       <div class="container nav_container">
         <a href="#" class="nav__logo">LookingFor</a>
-        <ul class="nav__bar nav__bar_opened">
+        <ul class="nav__bar">
           <li><a href="./index.html" class="nav__item nav__item_current">Home</a></li>
           <li><a href="./about.html" class="nav__item">About</a></li>
           <li><a href="./newcard.html" class="nav__item">New Card</a></li>
