--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/styles/style.scss">
-  <title>Document</title>
+  <title>LookingFor</title>
 </head>
 
 <body>
   <div class="lookingfor">
     <nav class="nav">
       <div class="container nav_container">
-        <a href="#" class="nav__logo">LookingFor</a>
+        <a href="./index.html" class="nav__logo">LookingFor</a>
         <ul class="nav__bar">
           <li><a href="./index.html" class="nav__item nav__item_current">Home</a></li>
           <li><a href="./about.html" class="nav__item">About</a></li>
-          <li><a href="./newcard.html" class="nav__item">New Card</a></li>
-          <li><a href="#" class="nav__item">Signin</a></li>
-          <li><a href="#" class="nav__item">Signup</a></li>
+          <li>
+            <div class="nav__item nav__item_newcard">New Card</div>
+          </li>
+          <li>
+            <div class="nav__item nav__item_signin">Signin</div>
+          </li>
+          <li>
+            <div class="nav__item nav__item_signup">Signup</div>
+          </li>
           <li><a href="./profile.html" class="nav__item">Profile</a></li>
         </ul>
       </div>
@@ -196,6 +202,47 @@
       </div>
     </footer>
   </div>
+
+  <div class="popup popup_newcard">
+    <h2 class="popup__title">New Card</h2>
+    <div class="popup__container">
+      <form class="filters__form filters__form_column" name="newcard">
+        <label class="filters__label filters__label_arrow filters__label_clear">
+          <div class="filters__title filters__title_newcard">Select your platform</div>
+          <select class="filters__select filters__select_long" name="platform" id="platform">
+            <option class="filters__option" value="any">Any Platform</option>
+            <option class="filters__option" value="pc">PC</option>
+            <option class="filters__option" value="ps">Play Station</option>
+            <option class="filters__option" value="xbox">XBox</option>
+          </select>
+        </label>
+        <label class="filters__label filters__label_arrow filters__label_clear">
+          <div class="filters__title filters__title_newcard">Select your region</div>
+          <select class="filters__select filters__select_long" name="region" id="region">
+            <option class="filters__option" value="any">Any Region</option>
+            <option class="filters__option" value="europe">Europe</option>
+            <option class="filters__option" value="asia">Asia</option>
+            <option class="filters__option" value="russia">Russia</option>
+            <option class="filters__option" value="america">America</option>
+          </select>
+        </label>
+        <label class="filters__label filters__label_arrow filters__label_clear">
+          <div class="filters__title filters__title_newcard">Select your voice setups</div>
+          <select class="filters__select filters__select_long" name="voice" id="voice">
+            <option class="filters__option" value="any">Any Voice</option>
+            <option class="filters__option" value="ingame">In-Game party</option>
+            <option class="filters__option" value="discord">Discord</option>
+          </select>
+        </label>
+        <label class="filters__label filters__label_clear">
+          <div class="filters__title filters__title_newcard">Write your about text</div>
+          <textarea class="filters__textarea" placeholder="Write your text..."></textarea>
+        </label>
+        <button type="submit" class="filters__button">Submit</button>
+      </form>
+    </div>
+  </div>
+
   <script src="./assets/scripts/index.js"></script>
 </body>
 
