--- a/src/newcard.html
+++ b/src/newcard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/styles/style.scss">
-  <title>Document</title>
+  <title>LookingFor</title>
 </head>
 
 <body>
@@ -17,9 +17,9 @@
         <ul class="nav__bar">
           <li><a href="./index.html" class="nav__item">Home</a></li>
           <li><a href="./about.html" class="nav__item">About</a></li>
-          <li><a href="./newcard.html" class="nav__item nav__item_current">New Card</a></li>
-          <li><a href="#" class="nav__item">Signin</a></li>
-          <li><a href="#" class="nav__item">Signup</a></li>
+          <li><div class="nav__item nav__item_newcard nav__item_current">New Card</div></li>
+          <li><div class="nav__item nav__item_signin">Signin</div></li>
+          <li><div class="nav__item nav__item_signup">Signup</div></li>
           <li><a href="./profile.html" class="nav__item">Profile</a></li>
         </ul>
       </div>
